Fix the errors and inclusions

--- a/app/clients.html
+++ b/app/clients.html
@@ -15,9 +15,9 @@
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../node_modules/lodash/lodash.min.js"></script>
     <!-- TUTOR_TODO Chapter 1.2 -->
-    <!-- Put GLUE configuration here -->
+    <script type="text/javascript" src="/lib/glue-js/web/tick42-glue-4.2.4.min.js"></script>
+    <script type="text/javascript" src="/lib/tick42-glue/tick42-glue-config.js"></script>
     <!-- TUTOR_TODO Chapter 1.2 -->
-    <script type="text/javascript" src="/lib/glue-js/web/tick42-glue-4.2.4.min.js" />;
     <!-- Put GLUE here -->
     <!-- Put the page-related source code here -->
     <script src="clients.js"></script>
