--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -15,7 +15,8 @@
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../node_modules/lodash/lodash.min.js"></script>
     <!-- TUTOR_TODO Chapter 1.2 -->
-    <!-- Put GLUE configuration here -->
+    <script type="text/javascript" src="/lib/glue-js/web/tick42-glue-4.2.4.min.js"></script>
+    <script type="text/javascript" src="/lib/tick42-glue/tick42-glue-config.js"></script>
     <!-- TUTOR_TODO Chapter 1.2 -->
     <!-- Put GLUE here -->
     <!-- TUTOR_TODO Chapter 6 -->
